@@ -39,6 +39,7 @@ import games.strategy.triplea.formatter.MyFormatter;
 import games.strategy.triplea.ui.NotificationMessages;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
@@ -52,6 +53,7 @@ import java.util.function.Predicate;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
+import javax.annotation.Nullable;
 import lombok.extern.slf4j.Slf4j;
 import org.triplea.java.ObjectUtils;
 import org.triplea.java.PredicateBuilder;
@@ -62,7 +64,8 @@ import org.triplea.util.Tuple;
 
 /**
  * An attachment for instances of {@link GamePlayer} that defines actions to be triggered upon
- * various events.
+ * various events. Note: Empty collection fields default to null to minimize memory use and
+ * serialization size.
  */
 @Slf4j
 public class TriggerAttachment extends AbstractTriggerAttachment {
@@ -87,45 +90,45 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   // Matches prefixes of "-clear-" and "-reset-". Non-capture-group.
   private static final Pattern clearFirstNewValueRegex = Pattern.compile("^-(:?clear|reset)-");
 
-  private ProductionFrontier frontier = null;
-  private List<String> productionRule = null;
-  private List<TechAdvance> tech = new ArrayList<>();
-  private Map<String, Map<TechAdvance, Boolean>> availableTech = null;
-  private Map<Territory, IntegerMap<UnitType>> placement = null;
-  private Map<Territory, IntegerMap<UnitType>> removeUnits = null;
-  private IntegerMap<UnitType> purchase = null;
-  private String resource = null;
+  private @Nullable ProductionFrontier frontier = null;
+  private @Nullable List<String> productionRule = null;
+  private @Nullable List<TechAdvance> tech = null;
+  private @Nullable Map<String, Map<TechAdvance, Boolean>> availableTech = null;
+  private @Nullable Map<Territory, IntegerMap<UnitType>> placement = null;
+  private @Nullable Map<Territory, IntegerMap<UnitType>> removeUnits = null;
+  private @Nullable IntegerMap<UnitType> purchase = null;
+  private @Nullable String resource = null;
   private int resourceCount = 0;
   // never use a map of other attachments, inside of an attachment. java will not be able to
   // deserialize it.
-  private Map<String, Boolean> support = null;
+  private @Nullable Map<String, Boolean> support = null;
   // List of relationshipChanges that should be executed when this trigger hits.
-  private List<String> relationshipChange = new ArrayList<>();
-  private String victory = null;
-  private List<Tuple<String, String>> activateTrigger = new ArrayList<>();
-  private List<String> changeOwnership = new ArrayList<>();
+  private @Nullable List<String> relationshipChange = null;
+  private @Nullable String victory = null;
+  private @Nullable List<Tuple<String, String>> activateTrigger = null;
+  private @Nullable List<String> changeOwnership = null;
   // raw property changes below:
-  private List<UnitType> unitTypes = new ArrayList<>();
-  private Tuple<String, String> unitAttachmentName =
-      null; // covers UnitAttachment, UnitSupportAttachment
-  private List<Tuple<String, String>> unitProperty = null;
-  private List<Territory> territories = new ArrayList<>();
-  private Tuple<String, String> territoryAttachmentName =
-      null; // covers TerritoryAttachment, CanalAttachment
-  private List<Tuple<String, String>> territoryProperty = null;
-  private List<GamePlayer> players = new ArrayList<>();
+  private @Nullable List<UnitType> unitTypes = null;
+  // covers UnitAttachment, UnitSupportAttachment
+  private @Nullable Tuple<String, String> unitAttachmentName = null;
+  private @Nullable List<Tuple<String, String>> unitProperty = null;
+  private @Nullable List<Territory> territories = null;
+  // covers TerritoryAttachment, CanalAttachment
+  private @Nullable Tuple<String, String> territoryAttachmentName = null;
+  private @Nullable List<Tuple<String, String>> territoryProperty = null;
+  private @Nullable List<GamePlayer> players = null;
   // covers PlayerAttachment, TriggerAttachment, RulesAttachment, TechAttachment,
   // UserActionAttachment
-  private Tuple<String, String> playerAttachmentName = null;
-  private List<Tuple<String, String>> playerProperty = null;
-  private List<RelationshipType> relationshipTypes = new ArrayList<>();
-  private Tuple<String, String> relationshipTypeAttachmentName =
-      null; // covers RelationshipTypeAttachment
-  private List<Tuple<String, String>> relationshipTypeProperty = null;
-  private List<TerritoryEffect> territoryEffects = new ArrayList<>();
-  private Tuple<String, String> territoryEffectAttachmentName =
-      null; // covers TerritoryEffectAttachment
-  private List<Tuple<String, String>> territoryEffectProperty = null;
+  private @Nullable Tuple<String, String> playerAttachmentName = null;
+  private @Nullable List<Tuple<String, String>> playerProperty = null;
+  private @Nullable List<RelationshipType> relationshipTypes = null;
+  // covers RelationshipTypeAttachment
+  private @Nullable Tuple<String, String> relationshipTypeAttachmentName = null;
+  private @Nullable List<Tuple<String, String>> relationshipTypeProperty = null;
+  private @Nullable List<TerritoryEffect> territoryEffects = null;
+  // covers TerritoryEffectAttachment
+  private @Nullable Tuple<String, String> territoryEffectAttachmentName = null;
+  private @Nullable List<Tuple<String, String>> territoryEffectProperty = null;
 
   public TriggerAttachment(
       final String name, final Attachable attachable, final GameData gameData) {
@@ -376,6 +379,9 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
     getBool(s[3]);
     getBool(s[4]);
     getBool(s[5]);
+    if (activateTrigger == null) {
+      activateTrigger = new ArrayList<>();
+    }
     activateTrigger.add(Tuple.of(s[0], options));
   }
 
@@ -384,11 +390,11 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private List<Tuple<String, String>> getActivateTrigger() {
-    return activateTrigger;
+    return getListProperty(activateTrigger);
   }
 
   private void resetActivateTrigger() {
-    activateTrigger = new ArrayList<>();
+    activateTrigger = null;
   }
 
   private void setFrontier(final String s) throws GameParseException {
@@ -407,7 +413,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
     frontier = value;
   }
 
-  private ProductionFrontier getFrontier() {
+  private @Nullable ProductionFrontier getFrontier() {
     return frontier;
   }
 
@@ -424,9 +430,6 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
     if (s.length != 2) {
       throw new GameParseException("Invalid productionRule declaration: " + prop + thisErrorMsg());
     }
-    if (productionRule == null) {
-      productionRule = new ArrayList<>();
-    }
     if (getData().getProductionFrontierList().getProductionFrontier(s[0]) == null) {
       throw new GameParseException("Could not find frontier. name:" + s[0] + thisErrorMsg());
     }
@@ -437,6 +440,9 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
     if (getData().getProductionRuleList().getProductionRule(rule) == null) {
       throw new GameParseException("Could not find production rule. name:" + rule + thisErrorMsg());
     }
+    if (productionRule == null) {
+      productionRule = new ArrayList<>();
+    }
     productionRule.add(prop);
   }
 
@@ -445,7 +451,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   List<String> getProductionRule() {
-    return productionRule;
+    return getListProperty(productionRule);
   }
 
   private void resetProductionRule() {
@@ -493,6 +499,9 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
       if (ta == null) {
         throw new GameParseException("Technology not found :" + subString + thisErrorMsg());
       }
+      if (tech == null) {
+        tech = new ArrayList<>();
+      }
       tech.add(ta);
     }
   }
@@ -502,11 +511,11 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private List<TechAdvance> getTech() {
-    return tech;
+    return getListProperty(tech);
   }
 
   private void resetTech() {
-    tech = new ArrayList<>();
+    tech = null;
   }
 
   private void setAvailableTech(final String techs) throws GameParseException {
@@ -550,7 +559,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private Map<String, Map<TechAdvance, Boolean>> getAvailableTech() {
-    return availableTech;
+    return getMapProperty(availableTech);
   }
 
   private void resetAvailableTech() {
@@ -593,7 +602,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private Map<String, Boolean> getSupport() {
-    return support;
+    return getMapProperty(support);
   }
 
   private void resetSupport() {
@@ -669,6 +678,9 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
               + " unknown "
               + thisErrorMsg());
     }
+    if (relationshipChange == null) {
+      relationshipChange = new ArrayList<>();
+    }
     relationshipChange.add(relChange);
   }
 
@@ -677,11 +689,11 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private List<String> getRelationshipChange() {
-    return relationshipChange;
+    return getListProperty(relationshipChange);
   }
 
   private void resetRelationshipChange() {
-    relationshipChange = new ArrayList<>();
+    relationshipChange = null;
   }
 
   private void setUnitType(final String names) throws GameParseException {
@@ -690,6 +702,9 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
       final UnitType type = getData().getUnitTypeList().getUnitType(element);
       if (type == null) {
         throw new GameParseException("Could not find unitType. name:" + element + thisErrorMsg());
+      }
+      if (unitTypes == null) {
+        unitTypes = new ArrayList<>();
       }
       unitTypes.add(type);
     }
@@ -700,11 +715,11 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private List<UnitType> getUnitType() {
-    return unitTypes;
+    return getListProperty(unitTypes);
   }
 
   private void resetUnitType() {
-    unitTypes = new ArrayList<>();
+    unitTypes = null;
   }
 
   private void setUnitAttachmentName(final String name) throws GameParseException {
@@ -775,7 +790,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private List<Tuple<String, String>> getUnitProperty() {
-    return unitProperty;
+    return getListProperty(unitProperty);
   }
 
   private void resetUnitProperty() {
@@ -789,6 +804,9 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
       if (terr == null) {
         throw new GameParseException("Could not find territory. name:" + element + thisErrorMsg());
       }
+      if (territories == null) {
+        territories = new ArrayList<>();
+      }
       territories.add(terr);
     }
   }
@@ -798,11 +816,11 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private List<Territory> getTerritories() {
-    return territories;
+    return getListProperty(territories);
   }
 
   private void resetTerritories() {
-    territories = new ArrayList<>();
+    territories = null;
   }
 
   private void setTerritoryAttachmentName(final String name) throws GameParseException {
@@ -873,7 +891,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private List<Tuple<String, String>> getTerritoryProperty() {
-    return territoryProperty;
+    return getListProperty(territoryProperty);
   }
 
   private void resetTerritoryProperty() {
@@ -887,6 +905,9 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
       if (player == null) {
         throw new GameParseException("Could not find player. name:" + element + thisErrorMsg());
       }
+      if (players == null) {
+        players = new ArrayList<>();
+      }
       players.add(player);
     }
   }
@@ -896,11 +917,13 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private List<GamePlayer> getPlayers() {
-    return players.isEmpty() ? new ArrayList<>(List.of((GamePlayer) getAttachedTo())) : players;
+    return players == null
+        ? List.of((GamePlayer) getAttachedTo())
+        : Collections.unmodifiableList(players);
   }
 
   private void resetPlayers() {
-    players = new ArrayList<>();
+    players = null;
   }
 
   private void setPlayerAttachmentName(final String playerAttachmentName)
@@ -997,7 +1020,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private List<Tuple<String, String>> getPlayerProperty() {
-    return playerProperty;
+    return getListProperty(playerProperty);
   }
 
   private void resetPlayerProperty() {
@@ -1013,6 +1036,9 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
         throw new GameParseException(
             "Could not find relationshipType. name:" + element + thisErrorMsg());
       }
+      if (relationshipTypes == null) {
+        relationshipTypes = new ArrayList<>();
+      }
       relationshipTypes.add(relation);
     }
   }
@@ -1022,11 +1048,11 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private List<RelationshipType> getRelationshipTypes() {
-    return relationshipTypes;
+    return getListProperty(relationshipTypes);
   }
 
   private void resetRelationshipTypes() {
-    relationshipTypes = new ArrayList<>();
+    relationshipTypes = null;
   }
 
   private void setRelationshipTypeAttachmentName(final String name) throws GameParseException {
@@ -1094,7 +1120,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private List<Tuple<String, String>> getRelationshipTypeProperty() {
-    return relationshipTypeProperty;
+    return getListProperty(relationshipTypeProperty);
   }
 
   private void resetRelationshipTypeProperty() {
@@ -1109,6 +1135,9 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
         throw new GameParseException(
             "Could not find territoryEffect. name:" + element + thisErrorMsg());
       }
+      if (territoryEffects == null) {
+        territoryEffects = new ArrayList<>();
+      }
       territoryEffects.add(effect);
     }
   }
@@ -1118,11 +1147,11 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private List<TerritoryEffect> getTerritoryEffects() {
-    return territoryEffects;
+    return getListProperty(territoryEffects);
   }
 
   private void resetTerritoryEffects() {
-    territoryEffects = new ArrayList<>();
+    territoryEffects = null;
   }
 
   private void setTerritoryEffectAttachmentName(final String name) throws GameParseException {
@@ -1189,7 +1218,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private List<Tuple<String, String>> getTerritoryEffectProperty() {
-    return territoryEffectProperty;
+    return getListProperty(territoryEffectProperty);
   }
 
   private void resetTerritoryEffectProperty() {
@@ -1245,7 +1274,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private Map<Territory, IntegerMap<UnitType>> getPlacement() {
-    return placement;
+    return getMapProperty(placement);
   }
 
   private void resetPlacement() {
@@ -1317,7 +1346,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private Map<Territory, IntegerMap<UnitType>> getRemoveUnits() {
-    return removeUnits;
+    return getMapProperty(removeUnits);
   }
 
   private void resetRemoveUnits() {
@@ -1362,7 +1391,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private IntegerMap<UnitType> getPurchase() {
-    return purchase;
+    return getIntegerMapProperty(purchase);
   }
 
   private void resetPurchase() {
@@ -1395,6 +1424,9 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
       throw new GameParseException("No such player: " + s[2] + thisErrorMsg());
     }
     getBool(s[3]);
+    if (changeOwnership == null) {
+      changeOwnership = new ArrayList<>();
+    }
     changeOwnership.add(value);
   }
 
@@ -1403,11 +1435,11 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   private List<String> getChangeOwnership() {
-    return changeOwnership;
+    return getListProperty(changeOwnership);
   }
 
   private void resetChangeOwnership() {
-    changeOwnership = new ArrayList<>();
+    changeOwnership = null;
   }
 
   private static void removeUnits(
@@ -2549,9 +2581,6 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
       if (fireTriggerParams.useUses) {
         t.use(bridge);
       }
-      if (t.getPlayers() == null) {
-        continue;
-      }
       final String victoryMessage = notificationMessages.getMessage(t.getVictory().trim());
       final String sounds = notificationMessages.getSoundsKey(t.getVictory().trim());
       if (victoryMessage != null) {
@@ -2602,7 +2631,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   public static Predicate<TriggerAttachment> prodFrontierEditMatch() {
-    return t -> t.getProductionRule() != null && !t.getProductionRule().isEmpty();
+    return t -> !t.getProductionRule().isEmpty();
   }
 
   public static Predicate<TriggerAttachment> techMatch() {
@@ -2610,19 +2639,19 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   public static Predicate<TriggerAttachment> techAvailableMatch() {
-    return t -> t.getAvailableTech() != null;
+    return t -> !t.getAvailableTech().isEmpty();
   }
 
   public static Predicate<TriggerAttachment> removeUnitsMatch() {
-    return t -> t.getRemoveUnits() != null;
+    return t -> !t.getRemoveUnits().isEmpty();
   }
 
   public static Predicate<TriggerAttachment> placeMatch() {
-    return t -> t.getPlacement() != null;
+    return t -> !t.getPlacement().isEmpty();
   }
 
   public static Predicate<TriggerAttachment> purchaseMatch() {
-    return t -> t.getPurchase() != null;
+    return t -> !t.getPurchase().isEmpty();
   }
 
   public static Predicate<TriggerAttachment> resourceMatch() {
@@ -2630,7 +2659,7 @@ public class TriggerAttachment extends AbstractTriggerAttachment {
   }
 
   public static Predicate<TriggerAttachment> supportMatch() {
-    return t -> t.getSupport() != null;
+    return t -> t.getSupport().isEmpty();
   }
 
   public static Predicate<TriggerAttachment> changeOwnershipMatch() {
